--- a/Simple Project/index.html
+++ b/Simple Project/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <nav>
+      <div class="logo">Alexander Duya</div>
+      <div class="nav-items">
+        <a href="/">Home</a> <a href="/">About</a> <a href="/">Info</a>
+      </div>
+    </nav>
+    <section class="hero">
+      <div class="hero-container">
+        <div class="column-left">
+          <h1>Full Stack Developer</h1>
+          <p>
+            Learning JavaScript, Python, HTML, CSS, React, SQL
+          </p>
+          <button>EMAIL</button>
+        </div>
+        <div class="column-right">
+          <img
+            src="./image-1.svg"
+            alt="picture"
+            class="hero-image"
+          />
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
